srcs/tester/base/queue/pop/log.txt
./base/queue/pop/patched.cpp:8:2: error: use of undeclared identifier 'ft'
 ft::queue<int> myqueue;
 ^
./base/queue/pop/patched.cpp:15:2: error: use of undeclared identifier 'myqueue'
 myqueue.push (myint);
 ^
./base/queue/pop/patched.cpp:19:10: error: use of undeclared identifier 'myqueue'
 while (!myqueue.empty())
         ^
./base/queue/pop/patched.cpp:21:22: error: use of undeclared identifier 'myqueue'
 std::cout << ' ' << myqueue.front();
                     ^
./base/queue/pop/patched.cpp:22:2: error: use of undeclared identifier 'myqueue'
 myqueue.pop();
 ^
5 errors generated.
